Add place holder and managing empty input

--- a/v3/visualize.html
+++ b/v3/visualize.html
@@ -147,8 +147,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <div id="frontendErrorOutput"></div>
 <div id="surveyPane"></div>
 
-<textarea id="inputTextArea" style="height: 200px; width: 700px;">
-Put your input here
+<textarea id="inputTextArea" placeholder="Put your input here" style="height: 200px; width: 700px;">
 </textarea>
 
 <p>
