--- a/v3/iframe-embed.html
+++ b/v3/iframe-embed.html
@@ -28,7 +28,7 @@
 <body>
 
   <div id="vizDiv"></div>
-  <button id="shower" onclick="toggleUserInput()">Show input</button>
+  <button id="show-hide-input-button" onclick="toggleUserInput()">Show input</button>
   <div style="display: none;" id="inputArea">
     <p>Input given by the user</p>
     <textarea style="width: 235px; height: 194px;" readonly id="userInput">No input given</textarea>
